# RealtimeEfficientTAM

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test_lint_type.yml
docs/source/: conf.py
efficient_track_anything/: __init__.py  build_efficienttam.py  demo.py  demo_4shanks.py  demo_mask.py  efficienttam_camera_predictor.py  real_time.py  realtime_tam.py  sam2_camera_predictor.py
efficient_track_anything/modeling/: efficienttam_base.py
efficient_track_anything/utils/: helper.py  misc.py
notebooks/: tam_real_time.py
src/realtime_efficient_tam/: helper.py  main.py  test.py
tests/: test_demo.py  test_main.py
